--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "qrcode": "^1.5.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-number-format": "^5.4.4",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
